@@ -7,8 +7,6 @@
     <pubDate>XXX</pubDate>
     <generator>eZ Components</generator>
     <docs>http://www.rssboard.org/rss-specification</docs>
-    <cloud>
-      <protocol domain="Cloud domain" port="Cloud port" path="Cloud path" registerProcedure="Cloud procedure" protocol="Cloud protocol"/>
-    </cloud>
+    <cloud domain="Cloud domain" port="Cloud port" path="Cloud path" registerProcedure="Cloud procedure" protocol="Cloud protocol"/>
   </channel>
 </rss>
